--- a/ShadowsocksX-NG/zh-Hans.lproj/SubscribePreferenceWindowController.strings
+++ b/ShadowsocksX-NG/zh-Hans.lproj/SubscribePreferenceWindowController.strings
@@ -1,3 +1,10 @@
+
+/* Class = "NSTextFieldCell"; placeholderString = "Optional"; ObjectID = "3kt-n3-uTF"; */
+"3kt-n3-uTF.placeholderString" = "Optional";
+
+/* Class = "NSTextFieldCell"; placeholderString = "Optional"; ObjectID = "ASh-mc-Uyt"; */
+"ASh-mc-Uyt.placeholderString" = "Optional";
+
 /* Class = "NSButtonCell"; title = "OK"; ObjectID = "CfK-8Y-YNP"; */
 "CfK-8Y-YNP.title" = "OK";
 
@@ -10,17 +17,20 @@
 /* Class = "NSTextFieldCell"; title = "Group"; ObjectID = "f2p-qb-uuE"; */
 "f2p-qb-uuE.title" = "组名";
 
-/* Class = "NSTextFieldCell"; title = "Text"; ObjectID = "ik7-wS-gok"; */
-"ik7-wS-gok.title" = "Text";
+/* Class = "NSTextFieldCell"; title = "Filter"; ObjectID = "rJV-YA-Cc9"; */
+"rJV-YA-Cc9.title" = "过滤";
 
-/* Class = "NSTextFieldCell"; title = "Count"; ObjectID = "wbG-HT-bdN"; */
-"wbG-HT-bdN.title" = "最大数量";
-
-/* Class = "NSTextFieldCell"; title = "URL"; ObjectID = "yBp-oB-gbL"; */
-"yBp-oB-gbL.title" = "订阅地址";
+/* Class = "NSTextFieldCell"; placeholderString = "Optional"; ObjectID = "rc1-l2-7Mh"; */
+"rc1-l2-7Mh.placeholderString" = "Optional";
 
 /* Class = "NSButtonCell"; title = "AutoUpdate"; ObjectID = "wAH-F1-KhY"; */
 "wAH-F1-KhY.title" = "自动更新";
 
+/* Class = "NSTextFieldCell"; title = "Count"; ObjectID = "wbG-HT-bdN"; */
+"wbG-HT-bdN.title" = "最大数量";
+
 /* Class = "NSButtonCell"; title = "Active"; ObjectID = "xDA-ea-y72"; */
 "xDA-ea-y72.title" = "激活";
+
+/* Class = "NSTextFieldCell"; title = "URL"; ObjectID = "yBp-oB-gbL"; */
+"yBp-oB-gbL.title" = "订阅地址";
