--- a/ShadowsocksX-NG/zh-Hans.lproj/TimeInteravalPreferencesWindowController.strings
+++ b/ShadowsocksX-NG/zh-Hans.lproj/TimeInteravalPreferencesWindowController.strings
@@ -12,4 +12,4 @@
 "qd0-kc-ttB.title" = "延迟测试时间间隔(分钟):";
 
 /* Class = "NSWindow"; title = "Time Interaval Preferences"; ObjectID = "vS3-DL-Nq3"; */
-"vS3-DL-Nq3.title" = "定时更新设置";
+"vS3-DL-Nq3.title" = "定时设置";
