添加忽略代理配置功能

--- a/ShadowsocksX-NG/zh-Hans.lproj/AdvPreferencesWindowController.strings
+++ b/ShadowsocksX-NG/zh-Hans.lproj/AdvPreferencesWindowController.strings
@@ -40,3 +40,5 @@
 
 /* Class = "NSButtonCell"; title = "Enable Verbose Mode"; ObjectID = "dCD-gg-I2i"; */
 "dCD-gg-I2i.title" = "启用 Verbose 模式";
+
+"xcB-yu-ghf.title" = "忽略代理"
